--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -9,15 +10,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <Button
-            android:id="@+id/loadHabitsButton"
-            android:layout_width="0dp"
-            app:layout_constraintHorizontal_weight="1"
-            android:layout_height="91dp"
-            android:text="@string/load_habits"/>
+<!--        <Button-->
+<!--            android:id="@+id/loadHabitsButton"-->
+<!--            android:layout_width="0dp"-->
+<!--            app:layout_constraintHorizontal_weight="1"-->
+<!--            android:layout_height="91dp"-->
+<!--            android:text="@string/load_habits"/>-->
 
         <Button
-            android:id="@+id/clearHabitsButton"
+            android:id="@+id/clear_habits_button"
             android:layout_width="130dp"
             android:layout_height="91dp"
             android:text="@string/clear_habits"
@@ -29,10 +30,10 @@
             app:layout_constraintVertical_bias="0.0" />
 
         <Button
-            android:id="@+id/newHabitButton"
-            android:layout_width="130dp"
-            android:layout_height="91dp"
-            android:text="@string/new_habit"
+            android:id="@+id/new_habit_button"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:background="@drawable/icon_plus"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -45,7 +46,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="400dp"
+        android:layout_height="597dp"
         android:scrollbars="vertical"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
