--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -16,6 +17,33 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintVertical_bias="0.256"/>
+
+    <RadioGroup
+        android:id="@+id/detail_radio_group"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:layout_editor_absoluteY="248dp"
+        tools:layout_editor_absoluteX="68dp">
+
+        <RadioButton
+            android:id="@+id/detail_radio_range"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Range"/>
+
+        <RadioButton
+            android:id="@+id/detail_radio_yes_no"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Yes / No"/>
+
+        <RadioButton
+            android:id="@+id/detail_radio_numerical"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Numerical"/>
+
+    </RadioGroup>
 
     <Button
         android:id="@+id/save_habit"
