--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -31,15 +31,15 @@
 
         <Button
             android:id="@+id/new_habit_button"
-            android:layout_width="90dp"
-            android:layout_height="90dp"
+            android:layout_width="64dp"
+            android:layout_height="64dp"
             android:background="@drawable/icon_plus"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_bias="0.953"
+            app:layout_constraintVertical_bias="0.483"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -54,5 +54,13 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintVertical_bias="1.0"/>
+
+    <Button
+        android:id="@+id/graph_button"
+        android:layout_width="61dp"
+        android:layout_height="61dp"
+        android:background="@drawable/icon_plus"
+        tools:layout_editor_absoluteY="96dp"
+        tools:layout_editor_absoluteX="334dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
