--- a/app/src/main/res/layout/activity_graph.xml
+++ b/app/src/main/res/layout/activity_graph.xml
@@ -7,55 +7,40 @@
     android:layout_height="match_parent"
     tools:context="com.kareanra.habittrack.view.GraphViewActivity">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/graph_previous_day_button"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_marginStart="10dp"
+            android:text="@string/arrow_left"/>
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/graph_today_button"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:layout_marginEnd="10dp"
+            android:text="@string/today"/>
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/graph_next_day_button"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_marginEnd="10dp"
+            android:text="@string/arrow_right"/>
+    </LinearLayout>
+
     <com.github.mikephil.charting.charts.BarChart
         android:id="@+id/habit_chart"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-
-<!--    <SeekBar-->
-<!--        android:id="@+id/seekBar2"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_alignParentBottom="true"-->
-<!--        android:layout_alignParentLeft="true"-->
-<!--        android:layout_margin="8dp"-->
-<!--        android:layout_toLeftOf="@+id/tvYMax"-->
-<!--        android:layout_marginRight="5dp"-->
-<!--        android:max="200"-->
-<!--        android:paddingBottom="12dp" />-->
-
-<!--    <SeekBar-->
-<!--        android:id="@+id/seekBar1"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_above="@+id/seekBar2"-->
-<!--        android:layout_margin="8dp"-->
-<!--        android:layout_marginBottom="35dp"-->
-<!--        android:layout_toLeftOf="@+id/tvXMax"-->
-<!--        android:layout_marginRight="5dp"-->
-<!--        android:max="1500"-->
-<!--        android:paddingBottom="12dp" />-->
-
-    <TextView
-        android:id="@+id/tvXMax"
-        android:layout_width="60dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:text="@string/dash"
-        android:layout_marginBottom="15dp"
-        android:layout_marginRight="10dp"
-        android:gravity="right"
-        android:textAppearance="?android:attr/textAppearanceSmall" />
-
-    <TextView
-        android:id="@+id/tvYMax"
-        android:layout_width="60dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:text="@string/dash"
-        android:layout_marginBottom="15dp"
-        android:layout_marginRight="10dp"
-        android:gravity="right"
-        android:textAppearance="?android:attr/textAppearanceSmall" />
+        android:layout_height="600dp"
+        tools:layout_editor_absoluteY="133dp"
+        tools:layout_editor_absoluteX="-16dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
