--- a/app/src/main/res/layout/activity_graph.xml
+++ b/app/src/main/res/layout/activity_graph.xml
@@ -8,6 +8,8 @@
     tools:context="com.kareanra.habittrack.view.GraphViewActivity">
 
     <LinearLayout
+        app:layout_constraintTop_toTopOf="parent"
+        android:id="@+id/graph_button_group"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -17,6 +19,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
             android:text="@string/arrow_left"/>
 
         <com.google.android.material.button.MaterialButton
@@ -40,7 +43,7 @@
         android:id="@+id/habit_chart"
         android:layout_width="match_parent"
         android:layout_height="600dp"
-        tools:layout_editor_absoluteY="133dp"
-        tools:layout_editor_absoluteX="-16dp"/>
+        android:layout_marginTop="40dp"
+        app:layout_constraintTop_toBottomOf="@+id/graph_button_group"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
